--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Completar o ensino médio</button>
-                <button class="botao">Passar no vestibular</button>
-                <button class="botao">Entrar e terminar a faculdade</button>
-                <button class="botao">Noivado e casamento</button>
+                <button class="botao">Passar no vestibular e entrar na faculdade</button>
+                <button class="botao">Comprar um apê</button>
+                <button class="botao">Termina a faculdade</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
