--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Entrar e terminar a faculdade sem ter muita dificuldade estudando bastante</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Apê dos sonhos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal"></h3>
+                    <h3 class="aba-conteudo-titulo-principal">Entrar e terminar a faculdade sem ter muita dificuldade estudando bastante</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
